# PSsimplesafeint

./: .gitignore  LICENSE  README.md  conanfile.py  psssafeint.h
.github/workflows/: runconantest.yml  runtests.yml
cevelop-workspace/PSSafeIntTests/: .cproject  .gitignore  .project  CMakeLists.txt  PSSafeIntTests.xml  generatenumericlimitstests.sh  smallint.xml
cevelop-workspace/PSSafeIntTests/cute/: cute.h  cute_base.h  cute_counting_listener.h  cute_data_driven.h  cute_demangle.h  cute_deprecated.h  cute_determine_library.h  cute_determine_traits.h  cute_determine_version.h  cute_diff_values.h  cute_equals.h  cute_integer_sequence.h  cute_listener.h  cute_range.h  cute_relops.h  cute_repeated_test.h  cute_runner.h  cute_suite.h  cute_suite_test.h  cute_test.h  cute_test_incarnate.h  cute_testmember.h  cute_throws.h  cute_to_string.h  cute_version.h  cute_xml_file.h  ide_listener.h  ostream_listener.h  tap_listener.h  xml_listener.h
cevelop-workspace/PSSafeIntTests/src/: CodeGenBenchmark.cpp  CodeGenBenchmark.h  Test.cpp  TestForZeroReturnAssertWithNDEBUG.cpp  TestForZeroReturnAssertWithNDEBUG.h  numericLimitsStaticTests.cpp  psssafeint.h
include/: psssafeint.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
